objects/vlocity_ins__ContractLineItem__c.object
<CustomObject>
    <description>A health insurance plan or retirement plan established by an employer or an employee organization (such as a union) to offer insurance or retirement services to its members.  Plans are governed by a contract, offered by an insurance or retirement services provider and administered by plan administrators.</description>
    <fields>
        <fullName>vlocity_ins__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Plans</relationshipLabel>
        <relationshipName>Benefit_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AttributeSelectedValues__c</fullName>
        <label>Attribute Selected Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AttributesData__c</fullName>
        <label>Attributes Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Attributes__c</fullName>
        <label>Attributes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Availability__c</fullName>
        <formula>vlocity_ins__ContractId__r.Account.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Availability</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClassCodes__c</fullName>
        <label>Class Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContractId__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Plans</relationshipLabel>
        <relationshipName>ContractLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContractMarketSegment__c</fullName>
        <formula>vlocity_ins__ContractId__r.vlocity_ins__AccountMarketSegment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveEndDate__c</fullName>
        <description>End date of line item</description>
        <label>Effective End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveStartDate__c</fullName>
        <description>Start date of line item</description>
        <label>Effective Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EligibilityCriteria__c</fullName>
        <label>Eligibility Criteria</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EnrollmentEndDate__c</fullName>
        <label>Enrollment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EnrollmentRatingType__c</fullName>
        <label>Enrollment Rating Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Composite</fullName>
                </value>
                <value>
                    <fullName>Age</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__EnrollmentStartDate__c</fullName>
        <label>Enrollment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EnrollmentWaitingPeriod__c</fullName>
        <label>Enrollment Waiting Period</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GroupClassId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Class</label>
        <referenceTo>vlocity_ins__GroupClass__c</referenceTo>
        <relationshipLabel>Plans</relationshipLabel>
        <relationshipName>Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GroupNumber__c</fullName>
        <externalId>true</externalId>
        <label>Group Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ImageId__c</fullName>
        <formula>vlocity_ins__Product2Id__r.vlocity_ins__ImageId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ItemName__c</fullName>
        <formula>vlocity_ins__QuoteLineItemId__r.vlocity_ins__ItemName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__JSONAttribute__c</fullName>
        <description>DEPRECATED. Use AttributesData instead.</description>
        <label>JSONAttribute - Deprecated</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LineNumber__c</fullName>
        <description>Vlocity line number generated by code which serves to sequence the line items and organize them into a hierarchy.</description>
        <label>LineNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LineStatus__c</fullName>
        <description>Status of this Contract Line Item</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__OriginalLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Line Item Id</label>
        <referenceTo>vlocity_ins__ContractLineItem__c</referenceTo>
        <relationshipLabel>Replacement Plans</relationshipLabel>
        <relationshipName>Contract_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ParentItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Item Id</label>
        <referenceTo>vlocity_ins__ContractLineItem__c</referenceTo>
        <relationshipLabel>Contract Line Items (Parent Item Id)</relationshipLabel>
        <relationshipName>ParentItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PricebookEntryId__c</fullName>
        <label>Price book Entry Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PricingLogData__c</fullName>
        <label>Pricing Log Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Product2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Contracted Plans</relationshipLabel>
        <relationshipName>OrderProduct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductCarrierName__c</fullName>
        <formula>vlocity_ins__ProductId__r.vlocity_ins__CarrierId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Carrier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductChildItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Child Item</label>
        <referenceTo>vlocity_ins__ProductChildItem__c</referenceTo>
        <relationshipLabel>Product Child Item</relationshipLabel>
        <relationshipName>ProductChildItem</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductCode__c</fullName>
        <description>Formula: Product Code from the associated product.</description>
        <formula>IF(vlocity_ins__Product2Id__c != null,  vlocity_ins__Product2Id__r.ProductCode, vlocity_ins__ProductId__r.ProductCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductDescription__c</fullName>
        <description>Formula: Product Description from the associated product.</description>
        <formula>IF(vlocity_ins__Product2Id__c != null,  vlocity_ins__Product2Id__r.Description, vlocity_ins__ProductId__r.Description)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED. Use Product2Id__c instead.</description>
        <label>Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Benefit Plans</relationshipLabel>
        <relationshipName>GroupBenefitsPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductName__c</fullName>
        <description>Formula: Product Name from the associated product.</description>
        <formula>vlocity_ins__Product2Id__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductNumber__c</fullName>
        <label>Product Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductStatus__c</fullName>
        <description>Formula: Product Status from the associated product.</description>
        <formula>IF(vlocity_ins__Product2Id__c != null,  TEXT(vlocity_ins__Product2Id__r.vlocity_ins__Status__c), TEXT(vlocity_ins__ProductId__r.vlocity_ins__Status__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductSubType__c</fullName>
        <description>Formula: Product Sub Type from the associated product.</description>
        <formula>IF(vlocity_ins__Product2Id__c != null, TEXT(vlocity_ins__Product2Id__r.vlocity_ins__SubType__c), TEXT(vlocity_ins__ProductId__r.vlocity_ins__SubType__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductType__c</fullName>
        <description>Formula: Product Type from the associated product.</description>
        <formula>IF(vlocity_ins__Product2Id__c != null, TEXT(vlocity_ins__Product2Id__r.vlocity_ins__Type__c), TEXT(vlocity_ins__ProductId__r.vlocity_ins__Type__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__QuoteLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Line Item Id</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>QuoteLineItem</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RateBandId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate Band</label>
        <referenceTo>vlocity_ins__RateBand__c</referenceTo>
        <relationshipLabel>Plans</relationshipLabel>
        <relationshipName>GroupBenefitsPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RecordTypeName__c</fullName>
        <formula>vlocity_ins__Product2Id__r.vlocity_ins__RecordTypeName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SubscriptionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subscription that this item describes.</description>
        <label>Subscription</label>
        <referenceTo>vlocity_ins__Subscription__c</referenceTo>
        <relationshipName>ContractLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalPrice__c</fullName>
        <formula>vlocity_ins__Quantity__c *   vlocity_ins__UnitPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Plan</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>vlocity_ins__ValidateEndDate</fullName>
        <active>true</active>
        <errorConditionFormula>DATEVALUE(vlocity_ins__EffectiveEndDate__c)  &gt;  vlocity_ins__ContractId__r.EndDate</errorConditionFormula>
        <errorMessage>Contract Line Item Effective End Date has to be earlier than Contract End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_ins__ValidateStartDate</fullName>
        <active>true</active>
        <errorConditionFormula>DATEVALUE(vlocity_ins__EffectiveStartDate__c)  &lt;  vlocity_ins__ContractId__r.StartDate</errorConditionFormula>
        <errorMessage>Contract Line Item Effective Start Date has to be later than Contract Start Date</errorMessage>
    </validationRules>
</CustomObject>